--- a/chamber/styles/chamber.css
+++ b/chamber/styles/chamber.css
@@ -133,12 +133,12 @@ h2 {
 }
 
 .member-card.gold {
-    border-color: #FA0001;
+    border-color: #f6fa00;
     background-color: #fff0f0;
 }
 
 .member-card.silver {
-    border-color: #C0C0C0;
+    border-color: #0099ff;
     background-color: #f8f8f8;
 }
 
